--- a/src/sme-main-intent.html
+++ b/src/sme-main-intent.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('sme-main-intent', {
-        category: 'semilimesAPI',
+        category: 'semilimesAPI_deprecated',
         color: '#E2D96E',
         defaults: {
             name: { value: "" },
