--- a/src/data-components/sme-comp-html.html
+++ b/src/data-components/sme-comp-html.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('sme-comp-html', {
-        category: 'semilimesAPI',
+        category: 'semilimesAPI_deprecated',
         color: '#a6bbcf',
         defaults: {
             name: { value: "" },
