--- a/src/form-components/sme-formComp-bucketPicker.html
+++ b/src/form-components/sme-formComp-bucketPicker.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('sme-formComp-bucketPicker', {
-        category: 'semilimesAPI',
+        category: 'semilimesAPI_deprecated',
         color: '#E6E0F8',
         defaults: {
             name: { value: "" },
@@ -76,8 +76,8 @@
         <input type="hidden" id="node-input-actionButtonTitleType">
     </div>
     <div class="form-row">
-        <label for="node-input-required"><i class="fa fa-tag"></i> Bucket type</label>
-        <select id="node-input-required">
+        <label for="node-input-bucketType"><i class="fa fa-tag"></i> Bucket type</label>
+        <select id="node-input-bucketType">
             <option value="post">Post</option>
             <option value="profile">Profile</option>
             <option value="groupchat">Group Chat</option>
