--- a/src/form-components/sme-formComp-channelPicker.html
+++ b/src/form-components/sme-formComp-channelPicker.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('sme-formComp-channelPicker', {
-        category: 'semilimesAPI',
+        category: 'semilimesAPI_deprecated',
         color: '#E6E0F8',
         defaults: {
             name: { value: "" },
