--- a/src/sme-main-formLoader.html
+++ b/src/sme-main-formLoader.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('sme-main-formLoader', {
-        category: 'semilimesAPI',
+        category: 'semilimesAPI_deprecated',
         color: "#E2D96E",
         defaults: {
             location: {value: "", required: true},
