--- a/src/sme-main-formSaver.html
+++ b/src/sme-main-formSaver.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('sme-main-formSaver', {
-        category: 'semilimesAPI',
+        category: 'semilimesAPI_deprecated',
         color: "#E2D96E",
         defaults: {
             location: {value: "", required: true},
