--- a/src/sender.html
+++ b/src/sender.html
@@ -56,17 +56,20 @@
             $("#node-input-recipientId")
             .typedInput({typeField: "#node-input-recipientIdType"})
             .typedInput('types',["str", "msg", "flow", "global"])
-            .typedInput('type',"str");
+            this.recipientId = $("#node-input-recipientId").typedInput('value');
+            this.recipientIdType = $("#node-input-recipientId").typedInput('type');
 
             $("#node-input-groupChatId")
             .typedInput({typeField: "#node-input-groupChatIdType"})
             .typedInput('types',["str", "msg", "flow", "global"])
-            .typedInput('type',"str");
+            this.groupChatId = $("#node-input-groupChatId").typedInput('value');
+            this.groupChatIdType = $("#node-input-groupChatId").typedInput('type');
 
             $("#node-input-channelId")
             .typedInput({typeField: "#node-input-channelIdType"})
             .typedInput('types',["str", "msg", "flow", "global"])
-            .typedInput('type',"str");
+            this.channelId = $("#node-input-channelId").typedInput('value');
+            this.channelIdType = $("#node-input-channelId").typedInput('type');
         },
         oneditprepare: function () {
             $('#node-input-logToConsole').prop("checked", this.logToConsole);
@@ -74,7 +77,7 @@
             $("#node-input-recipientId")
             .typedInput({typeField: "#node-input-recipientIdType"})
             .typedInput('types',["str", "msg", "flow", "global"])
-            .typedInput('type',"str");
+            .typedInput('type',this.recipientIdType);
 
             $("#node-input-messageId").typedInput({
                 type: "str",
@@ -97,12 +100,18 @@
             $("#node-input-groupChatId")
             .typedInput({typeField: "#node-input-groupChatIdType"})
             .typedInput('types',["str", "msg", "flow", "global"])
-            .typedInput('type',"str");
+            .typedInput('type',this.groupChatIdType);
             
             $("#node-input-channelId")
             .typedInput({typeField: "#node-input-channelIdType"})
             .typedInput('types',["str", "msg", "flow", "global"])
-            .typedInput('type',"str");
+            .typedInput('type',this.channelIdType);
+
+            $("#node-input-title").typedInput({
+                type: "str",
+                types: ["str", "msg", "flow", "global"],
+                typeField: "#node-input-titleType"
+            });
             
             $("#node-input-saveLocation").typedInput({
                 type: "msg",
