--- a/src/formSetup.html
+++ b/src/formSetup.html
@@ -26,7 +26,7 @@
         icon: "font-awesome/fa-cogs",
         paletteLabel: 'Form Setup',
         label: function() {
-            return this.name || "Form Setup" + (this.refName ? ` | Ref: ${this.refName}`: "");
+            return this.name || "Form Setup" + (this.refName ? ` | Ref: ${this.refNameType === "str" ? "" : this.refNameType+"."}${this.refName}`: "");
         },
         oneditsave: function() {
             $("#node-input-recipientId")
