--- a/src/listener.html
+++ b/src/listener.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
-    RED.nodes.registerType('sme-main-listener', {
-        category: 'semilimesAPI_deprecated',
+    RED.nodes.registerType('listener', {
+        category: 'semilimesAPI',
         color: "#D7D7A0",
         defaults: {
             connector: { type: 'sme-main-connector', required: true }
@@ -14,7 +14,7 @@
     });
 </script>
 
-<script type="text/html" data-template-name="sme-main-listener">
+<script type="text/html" data-template-name="listener">
     <div style="max-width:500px">Listen to incoming events from semilimes. You can create many instances, but one is enough.</div>
     <br />
     <div class="form-row">
@@ -24,7 +24,7 @@
     <div style="font-size: smaller;max-width:500px;">Connector could be sharely used for other nodes.</div>
 </script>
 
-<script type="text/html" data-help-name="sme-main-listener">
+<script type="text/html" data-help-name="listener">
     <p>Listen to inbound events from semilimes server using a semilimes connector.</p>
     <h3>Outputs</h3>
     <dl class="message-properties">
