--- a/src/sender.html
+++ b/src/sender.html
@@ -40,7 +40,7 @@
         inputs: 1,
         outputs: 1,
         align: 'right',
-        icon: "font-awesome/fa-rss",
+        icon: "font-awesome/fa-paper-plane",
         paletteLabel: 'sender',
         label: function() {
             var displayText = "";
