Naming fixes - Updated README

--- a/src/listener.html
+++ b/src/listener.html
@@ -9,7 +9,7 @@
         outputs: 1,
         align: 'left',
         icon: "font-awesome/fa-rss",
-        paletteLabel: 'listener',
+        paletteLabel: 'Listener',
         label: 'semilimes listener',
     });
 </script>
