--- a/src/sender.html
+++ b/src/sender.html
@@ -41,7 +41,7 @@
         outputs: 1,
         align: 'right',
         icon: "font-awesome/fa-paper-plane",
-        paletteLabel: 'sender',
+        paletteLabel: 'Sender',
         label: function() {
             var displayText = "";
             switch(this.actionName) {
